<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/login_crowd_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:src="@drawable/logo_02" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/middle_spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email_icon"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:typeface="sans">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/password_icon"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:typeface="sans" />

        <android.support.v7.widget.CardView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/signup_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_yet"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/signup_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/signup"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>