<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/media_bg" />

        <ImageView
            android:id="@+id/root_bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.09"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp">

        <com.andexert.library.RippleView
            android:id="@+id/close_button_ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_centered="true"
            app:rv_color="@android:color/black"
            app:rv_rippleDuration="100">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/cross_icon_01" />
        </com.andexert.library.RippleView>

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/preview"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/thirty_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_panel"
        android:layout_below="@+id/divider">

        <RelativeLayout
            android:id="@+id/album_info_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/album_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy"
                android:visibility="invisible"
                app:riv_corner_radius="4dp" />

            <LinearLayout
                android:id="@+id/album_info_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/album_image"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/song_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/thirty_white"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/seekbar_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <SeekBar
                android:id="@+id/song_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/play_duration"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/seekbar_style"
                android:shape="oval"
                android:splitTrack="false"
                android:thumb="@drawable/play_bar_thumb"
                android:thumbOffset="0dp" />

            <TextView
                android:id="@+id/play_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:minWidth="36dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/seekbar_panel"
            android:layout_below="@+id/album_info_panel"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/song_lyrics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/song_lyrics_color_prev"
                android:textSize="24sp"
                android:visibility="gone" />

            <!--<kr.keumyoung.mukin.elements.LyricsView-->
            <kr.keumyoung.mukin.elements.TwoLineLyricsView
                android:id="@+id/lyrics_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/save_button_ripple"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">


            <com.andexert.library.RippleView
                android:id="@+id/cancel_anchor_ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:rv_centered="true"
                app:rv_color="@android:color/black"
                app:rv_rippleDuration="100">

                <LinearLayout
                    android:id="@+id/cancel_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/trash_02_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.andexert.library.RippleView>

            <com.andexert.library.RippleView
                android:id="@+id/play_anchor_ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:rv_centered="true"
                app:rv_color="@android:color/black"
                app:rv_rippleDuration="100">

                <ImageView
                    android:id="@+id/play_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/play_02_icon" />
            </com.andexert.library.RippleView>

            <com.andexert.library.RippleView
                android:id="@+id/re_record_anchor_ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:rv_centered="true"
                app:rv_color="@android:color/black"
                app:rv_rippleDuration="100">

                <LinearLayout
                    android:id="@+id/re_record_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/reload_02_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/re_record"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.andexert.library.RippleView>

        </RelativeLayout>

        <com.andexert.library.RippleView
            android:id="@+id/save_button_ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:rv_centered="false"
            app:rv_color="@android:color/white"
            app:rv_rippleDuration="100">

            <TextView
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_theme"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </com.andexert.library.RippleView>

    </RelativeLayout>

</RelativeLayout>